--- a/source/DotNetBay.WPF/MainWindow.xaml
+++ b/source/DotNetBay.WPF/MainWindow.xaml
@@ -1,8 +1,42 @@
 ﻿<Window x:Class="DotNetBay.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:DotNetBay.WPF"
+        mc:Ignorable="d"
+        Title="MainWindow"
+        Height="350"
+        Width="525">
     <Grid>
+       <Grid.RowDefinitions>
+           <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0" Width="75" Height="30" Padding="5" Margin="5" HorizontalAlignment="Left">New Auction</Button>
+        <DataGrid Name="Auction" IsReadOnly="True" AutoGenerateColumns="False" Grid.Row="1" ItemsSource="{Binding Auctions}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Auction"></DataGridTextColumn>
+                <DataGridTextColumn Header="Status" Binding="{Binding Status}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Start Price" Binding="{Binding StartPrice}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Current Price" Binding="{Binding CurrentPrice}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Bids" Binding="{Binding Bids.Count}" ></DataGridTextColumn>
+                <DataGridTextColumn Header="Starts" Binding="{Binding StartDateTimeUtc}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Ends" Binding="{Binding EndDateTimeUtc}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Seller" Binding="{Binding Seller}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Current Winner" Binding="{Binding Winner}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Closed" Binding="{Binding IsClosed}"></DataGridTextColumn>
+                <DataGridTemplateColumn Header="Place Bid">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button>Bid</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    
+                </DataGridTemplateColumn>
+                </DataGrid.Columns>
+        </DataGrid>
+        
         
     </Grid>
 </Window>
