--- a/source/DotNetBay.WPF/SellView.xaml
+++ b/source/DotNetBay.WPF/SellView.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="DotNetBay.WPF.SellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:wpftk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="SellView" Height="350" Width="525">
     <Grid>
         <Grid.RowDefinitions>
@@ -32,8 +33,8 @@
             <TextBox Grid.Row="0" Grid.Column="1" Margin="5,0,5,0"></TextBox>
             <TextBox Grid.Row="1" Grid.Column="1" Margin="5,0,5,0"></TextBox>
             <TextBox Grid.Row="2" Grid.Column="1" Margin="5,0,5,0"></TextBox>
-            <TextBox Grid.Row="3" Grid.Column="1" Margin="5,0,5,0"></TextBox>
-            <TextBox Grid.Row="4" Grid.Column="1" Margin="5,0,5,0"></TextBox>
+            <wpftk:DateTimePicker Grid.Row="3" Grid.Column="1" Margin="5,0,5,0" AllowSpin="True" ClipValueToMinMax="True"/>
+            <wpftk:DateTimePicker Grid.Row="4" Grid.Column="1" Margin="5,0,5,0" AllowSpin="True" ClipValueToMinMax="True"/>
             <DockPanel Grid.Row="5" Grid.Column="1" >
                 <Button DockPanel.Dock="Right" Width="20" Content="..." Margin="5,0,5,0"></Button>
                 <TextBox Margin="5,0,5,0" />
