--- a/source/DotNetBay.WPF/BidView.xaml
+++ b/source/DotNetBay.WPF/BidView.xaml
@@ -2,5 +2,40 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="SellView" Height="350" Width="525">
-    
+    <DockPanel Margin="5,5,5,5">
+        <Label DockPanel.Dock="Top" Content="Place Bid for Auction" FontSize="20" FontWeight="Bold" />
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
+            <Button Width="Auto" Content="Place bid" Margin="5,0,5,0"></Button>
+            <Button Width="Auto" Content="Cancel" Margin="5,0,5,0"></Button>
+        </StackPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Content="Title"/>
+            <Label Grid.Row="1" Grid.Column="0" Content=""/>
+            <Label Grid.Row="2" Grid.Column="0" Content="Description"/>
+            <Label Grid.Row="3" Grid.Column="0" Content="Start Price"/>
+            <Label Grid.Row="4" Grid.Column="0" Content="Current Price"/>
+            <Label Grid.Row="5" Grid.Column="0" Content="Your bid"/>
+            
+            <Label Grid.Row="0" Grid.Column="1" Content="{Binding Title}" />
+            <Image Grid.Row="1" Grid.Column="1" Source="{Binding Image}"/>
+            <Label Grid.Row="2" Grid.Column="1" Content="{Binding Description}" />
+            <Label Grid.Row="3" Grid.Column="1" Content="{Binding StartPrice}" />
+            <Label Grid.Row="4" Grid.Column="1" Content="{Binding CurrentPrice}" />
+            <TextBox Grid.Row="5" Grid.Column="1" />
+            
+        </Grid>
+
+    </DockPanel>
 </Window>
