--- a/source/DotNetBay.WPF/MainWindow.xaml
+++ b/source/DotNetBay.WPF/MainWindow.xaml
@@ -33,9 +33,8 @@
                 <DataGridTemplateColumn Header="Place Bid">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Visibility="{Binding Path=IsRunning, Converter={StaticResource booleanToVisibilityConverter}}" Command="{Binding Bid}">
-                                Bid
-                            </Button>
+                            <Button Visibility="{Binding Path=IsRunning, Converter={StaticResource booleanToVisibilityConverter}}"
+                                    Command="{Binding Path=DataContext.Bid,RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Content="Bid"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                     
