--- a/source/DotNetBay.WPF/SellView.xaml
+++ b/source/DotNetBay.WPF/SellView.xaml
@@ -4,7 +4,7 @@
         xmlns:wpftk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="SellView" Height="350" Width="525">
     <DockPanel Margin="5,5,5,5">
-        <Label DockPanel.Dock="Top" Content="Place Bid for Auction" FontSize="20" FontWeight="Bold" />
+        <Label DockPanel.Dock="Top" Content="Add new Auction" FontSize="20" FontWeight="Bold" />
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
             <Button Width="Auto" Content="Save" Margin="5,0,5,0"></Button>
             <Button Width="Auto" Content="Cancel" Margin="5,0,5,0"></Button>
