--- a/source/DotNetBay.WPF/View/BidView.xaml
+++ b/source/DotNetBay.WPF/View/BidView.xaml
@@ -1,12 +1,15 @@
 ﻿<Window x:Class="DotNetBay.WPF.View.BidView"
+        x:Name="BidWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SellView" Height="350" Width="525">
+        Title="SellView" 
+        Height="350" 
+        Width="525">
     <DockPanel Margin="5,5,5,5">
         <Label DockPanel.Dock="Top" Content="Place Bid for Auction" FontSize="20" FontWeight="Bold" />
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
             <Button Width="Auto" Content="Place bid" Margin="5,0,5,0"></Button>
-            <Button Width="Auto" Content="Cancel" Margin="5,0,5,0"></Button>
+            <Button Width="Auto" Content="Cancel" Command="{Binding CloseWindowCommand, Mode=OneWay}" CommandParameter="{Binding ElementName=BidWindow}" Margin="5,0,5,0"></Button>
         </StackPanel>
         <Grid>
             <Grid.RowDefinitions>
