--- a/source/DotNetBay.WPF/View/SellView.xaml
+++ b/source/DotNetBay.WPF/View/SellView.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="DotNetBay.WPF.SellView"
+        x:Name="SellWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpftk="http://schemas.xceed.com/wpf/xaml/toolkit"
@@ -7,7 +8,7 @@
         <Label DockPanel.Dock="Top" Content="Add new Auction" FontSize="20" FontWeight="Bold" />
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
             <Button Width="Auto" Content="Save" Margin="5,0,5,0"></Button>
-            <Button Width="Auto" Content="Cancel" Margin="5,0,5,0"></Button>
+            <Button Width="Auto" Content="Cancel" Margin="5,0,5,0" Command="{Binding CloseWindowCommand, Mode=OneWay}" CommandParameter="{Binding ElementName=SellWindow}"></Button>
         </StackPanel>
         <Grid>
             <Grid.RowDefinitions>
