--- a/source/DotNetBay.WPF/View/BidView.xaml
+++ b/source/DotNetBay.WPF/View/BidView.xaml
@@ -1,24 +1,19 @@
 ﻿<Window x:Class="DotNetBay.WPF.View.BidView"
+        x:Name="BidWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodel="clr-namespace:DotNetBay.WPF.ViewModel"
-        d:DataContext="{d:DesignInstance Type=viewmodel:BidViewModel}"
-        mc:Ignorable="d"
-        Title="Bid View" Height="350" Width="525">
-    
-    
+        Title="SellView" 
+        Height="350" 
+        Width="525">
     <DockPanel Margin="5,5,5,5">
         <Label DockPanel.Dock="Top" Content="Place Bid for Auction" FontSize="20" FontWeight="Bold" />
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
-            <Button Width="Auto" Content="Place bid" Margin="5,5,5,5"></Button>
-            <Button Width="Auto" Content="Cancel" Margin="5,5,5,5"></Button>
+            <Button Width="Auto" Content="Place bid" Margin="5,0,5,0"></Button>
+            <Button Width="Auto" Content="Cancel" Command="{Binding CloseWindowCommand, Mode=OneWay}" CommandParameter="{Binding ElementName=BidWindow}" Margin="5,0,5,0"></Button>
         </StackPanel>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
@@ -29,21 +24,20 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <!-- Title-->
-            <Label Margin="10,10,0,10"  Grid.Row="0" Grid.Column="0" Content="Title:" />
-            <Label Margin="10,10,0,10" Grid.Row="0" Grid.Column="1" Content="{Binding Title}"/>
-            <!-- Description-->
-            <Label Margin="10,10,0,10" Grid.Row="1" Grid.Column="0" Content="Description:" />
-            <Label Margin="10,10,0,10" Grid.Row="1" Grid.Column="1" Content="{Binding Description}"/>
-            <!-- Startprice-->
-            <Label Margin="10,10,0,10" Grid.Row="2" Grid.Column="0" Content="Start Price:" />
-            <Label Margin="10,10,0,10" Grid.Row="2" Grid.Column="1" Content="{Binding StartPrice}"/>
-            <!-- Currentprice-->
-            <Label Margin="10,10,0,10" Grid.Row="3" Grid.Column="0" Content="Current Price:" />
-            <Label Margin="10,10,0,10" Grid.Row="3" Grid.Column="1" Content="{Binding CurrentPrice}"/>
-            <!-- Yourbid-->
-            <Label Margin="10,10,0,10" Grid.Row="4" Grid.Column="0" Content="Your bid:"/>
-            <TextBox Margin="10,10,0,10" Grid.Row="4" Grid.Column="1" Text="{Binding YourBid}"/>        
+            <Label Grid.Row="0" Grid.Column="0" Content="Title"/>
+            <Label Grid.Row="1" Grid.Column="0" Content=""/>
+            <Label Grid.Row="2" Grid.Column="0" Content="Description"/>
+            <Label Grid.Row="3" Grid.Column="0" Content="Start Price"/>
+            <Label Grid.Row="4" Grid.Column="0" Content="Current Price"/>
+            <Label Grid.Row="5" Grid.Column="0" Content="Your bid"/>
+            
+            <Label Grid.Row="0" Grid.Column="1" Content="{Binding Title}" />
+            <Image Grid.Row="1" Grid.Column="1" Source="{Binding Image}"/>
+            <Label Grid.Row="2" Grid.Column="1" Content="{Binding Description}" />
+            <Label Grid.Row="3" Grid.Column="1" Content="{Binding StartPrice}" />
+            <Label Grid.Row="4" Grid.Column="1" Content="{Binding CurrentPrice}" />
+            <TextBox Grid.Row="5" Grid.Column="1" />
+            
         </Grid>
 
     </DockPanel>
